adding appointmnet calender

--- a/src/frontend/src/app/components/appointments/appointments.component.html
+++ b/src/frontend/src/app/components/appointments/appointments.component.html
@@ -1,16 +1,19 @@
-<h1>appointments works!</h1>
-
 <div class="container">
+<h1>Schedule Appointment</h1>
+
+       <span class="glyphicon glyphicon-plus"><strong>My Appointments</strong></span>            
+
 	<table class="table">
 		<thead>
 			<tr>
 				<th>Doctor Name</th>
-				<th>Appointment Date</th>
-				<th>Appointment Start Time</th>
-				<th>Appointment End Time</th>
+				<th>Date</th>
+				<th>Start Time</th>
+				<th>End Time</th>
 				<th>Status</th>
 				<th>Pet Id</th>
 				<th>Branch Id</th>
+				<th>Action</th>
 			</tr>
 		</thead>
 		<tbody>
