--- a/src/frontend/src/app/components/form/pet/pet.component.html
+++ b/src/frontend/src/app/components/form/pet/pet.component.html
@@ -11,7 +11,7 @@
 		<label>Breed</label>
 		<input type="text" class="form-control" [(ngModel)]="pet.breed" name="breed" required="required" /> 
 		<label>Gender</label>
-		<select  class="form-control" [(ngModel)]="gender" name="pet.gender" required="required">
+		<select  class="form-control" [(ngModel)]="pet.gender" name="pet.gender" required="required">
 		<option value="male">Male</option>
 		<option value="female">Female</option>
 		</select>
