--- a/src/frontend/src/app/components/home/home.component.html
+++ b/src/frontend/src/app/components/home/home.component.html
@@ -1,4 +1,7 @@
 <div class="container">
-<h1>Welcome to the system....</h1>
-
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<div class="container">
+<span> <h1 class="text">AEM Experience fragments renders here...</h1></span>
+</div>
 </div>
