adding support for rending fragment on home page

--- a/src/frontend/src/app/components/home/home.component.html
+++ b/src/frontend/src/app/components/home/home.component.html
@@ -2,6 +2,11 @@
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <div class="container">
-<span> <h1 class="text">AEM Experience fragments renders here...</h1></span>
+<!-- <div *ngFor="let image of images">
+<img src="http://localhost:4503{{image}}" alt="Smiley face" height="420" width="420">
+</div> -->
+
+<span> <h1 class="text">AEM Experience(Content) fragments renders here...</h1></span>
+{{contentfragment}}
 </div>
 </div>
